--- a/about.html
+++ b/about.html
@@ -142,9 +142,14 @@
         <div class="container">
             <div class="partner-content">
                 <h2>Our Partner</h2>
-                <h3>Simpson & Company Limited</h3>
-                <p>As an authorized distributor of Simpson & Company Limited, we're proud to bring their legacy of quality and innovation to our customers. Simpson & Company is a trusted name in the paint and chemical industry, known for their commitment to excellence and cutting-edge formulations.</p>
-                <a href="http://simpsons.in/paints.html" target="_blank" class="btn btn-secondary">Visit Simpson & Company →</a>
+                <h3>Addisons Paints & Chemicals</h3>
+                <p class="partner-subtitle">A Division of Simpson & Company Limited</p>
+                <p>As an authorized distributor of Addisons Paints & Chemicals, we're proud to bring their legacy of quality and innovation to our customers. Addisons is one of the oldest and most respected paint companies in India, established in 1948.</p>
+                <p>Part of the AMALGAMATIONS group and a division of Simpson & Company Limited, Addisons has become a significant global participant in the paint industry. They manufacture high-performance industrial and automotive coatings from their state-of-the-art facility in Chennai, serving major clients including Tata Steel, Jindal Steel, Wheels India Limited, and many other leading industrial companies.</p>
+                <div class="partner-buttons">
+                    <a href="http://simpsons.in/paints.html" target="_blank" class="btn btn-secondary">Visit Simpson & Company →</a>
+                    <a href="addisons-company-profile.pdf" download class="btn btn-primary">Download Company Profile</a>
+                </div>
             </div>
         </div>
     </section>
