--- a/products.html
+++ b/products.html
@@ -37,7 +37,7 @@
     <section class="page-header">
         <div class="container">
             <h1>Our Products</h1>
-            <p>Premium paints and chemicals from Simpson & Company Limited</p>
+            <p>Premium paints and chemicals from Addisons Paints & Chemicals</p>
         </div>
     </section>
 
@@ -46,15 +46,23 @@
         <div class="container">
             <div class="catalogue-content">
                 <div class="catalogue-text">
-                    <h2>Complete Shade Card</h2>
-                    <p>Download our comprehensive shade card featuring over 100 colors across all categories</p>
+                    <h2>Complete Shade Card & Company Profile</h2>
+                    <p>Download our comprehensive shade card featuring over 100 colors, plus the complete Addisons Paints & Chemicals company profile with detailed product information</p>
                 </div>
-                <a href="shade-card.pdf" download class="btn btn-primary">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"></path>
-                    </svg>
-                    Download Shade Card
-                </a>
+                <div class="catalogue-buttons">
+                    <a href="shade-card.pdf" download class="btn btn-primary">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"></path>
+                        </svg>
+                        Shade Card
+                    </a>
+                    <a href="addisons-company-profile.pdf" download class="btn btn-secondary">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M7 10l5 5 5-5M12 15V3"></path>
+                        </svg>
+                        Company Profile
+                    </a>
+                </div>
             </div>
         </div>
     </section>
