--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="title-line">Solutions for</span>
                     <span class="title-line highlight">Every Project</span>
                 </h1>
-                <p class="hero-subtitle">Authorized distributor of Simpson & Company Limited - Delivering quality paints and chemicals since our inception</p>
+                <p class="hero-subtitle">Authorized distributor of Addisons Paints & Chemicals (Simpson & Company Limited) - Delivering quality paints and chemicals since our inception</p>
                 <div class="hero-actions">
                     <a href="#enquiry" class="btn btn-primary">Get Quote</a>
                     <a href="products.html" class="btn btn-secondary">View Catalogue</a>
@@ -67,7 +67,7 @@
                         </svg>
                     </div>
                     <h3>Authorized Distributor</h3>
-                    <p>Official partner of Simpson & Company Limited, ensuring genuine products</p>
+                    <p>Official partner of Addisons Paints & Chemicals, a division of Simpson & Company Limited</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -176,6 +176,43 @@
         </div>
     </section>
 
+    <!-- Downloads Section -->
+    <section class="downloads-section">
+        <div class="container">
+            <h2 class="section-title">Downloads & Resources</h2>
+            <div class="downloads-grid">
+                <div class="download-card">
+                    <div class="download-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8z"></path>
+                            <polyline points="14 2 14 8 20 8"></polyline>
+                            <line x1="12" y1="18" x2="12" y2="12"></line>
+                            <line x1="9" y1="15" x2="15" y2="15"></line>
+                        </svg>
+                    </div>
+                    <h3>Authorization Letter</h3>
+                    <p>Official authorization certificate from Addisons Paints & Chemicals confirming our distributorship</p>
+                    <a href="authorization-letter.pdf" download class="btn btn-secondary">Download PDF</a>
+                </div>
+
+                <div class="download-card">
+                    <div class="download-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14 2H6a2 2 0 00-2 2v16a2 2 0 002 2h12a2 2 0 002-2V8z"></path>
+                            <polyline points="14 2 14 8 20 8"></polyline>
+                            <line x1="16" y1="13" x2="8" y2="13"></line>
+                            <line x1="16" y1="17" x2="8" y2="17"></line>
+                            <polyline points="10 9 9 9 8 9"></polyline>
+                        </svg>
+                    </div>
+                    <h3>Company Profile</h3>
+                    <p>Complete company profile of Addisons Paints & Chemicals with product details and capabilities</p>
+                    <a href="addisons-company-profile.pdf" download class="btn btn-secondary">Download PDF</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Location Map -->
     <section class="map-section" id="location">
         <div class="container">
@@ -200,7 +237,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <img src="logo.png" alt="The Supply Store" class="footer-logo">
-                    <p>Your trusted partner for premium paint solutions. Authorized distributor of Simpson & Company Limited.</p>
+                    <p>Your trusted partner for premium paint solutions. Authorized distributor of Addisons Paints & Chemicals, a division of Simpson & Company Limited.</p>
                 </div>
                 
                 <div class="footer-section">
@@ -216,7 +253,8 @@
                 <div class="footer-section">
                     <h3>Our Partner</h3>
                     <ul>
-                        <li><a href="http://simpsons.in/paints.html" target="_blank">Simpson & Company Limited</a></li>
+                        <li><a href="http://simpsons.in/paints.html" target="_blank">Addisons Paints & Chemicals</a></li>
+                        <li><a href="http://simpsons.in" target="_blank">Simpson & Company Limited</a></li>
                     </ul>
                 </div>
                 
